@@ -1,7 +1,8 @@
 Pending changes in the mainline
 ===============================
 
-* Support of the most common text encodings
+* More fault-tolerant commands in Lua scripts
+* Support of the standard text encodings
 * Parameter to set the default encoding for DICOM files without SpecificCharacterSet
 * Fix of issue #14 (support of XCode 5.1)
 * Upgrade to Google Test 1.7.0
